Fix spacing and add borders to announcements

--- a/style.css
+++ b/style.css
@@ -172,8 +172,7 @@
 .extra-content {
     padding: 15px;
     display: grid;
-    grid-template-rows: repeat(2, 1fr);
-
+    grid-template-rows: 1fr 2fr;
 }
 
 .announce-card {
@@ -205,6 +204,7 @@
 .trending {
     display: flex;
     flex-direction: column;
+    margin-top: 20px;
 }
 
 .trend-card {
